--- a/src/app/components/Brands/Brands.scss
+++ b/src/app/components/Brands/Brands.scss
@@ -5,12 +5,14 @@
 		display: flex;
   	flex-direction: column;
   	gap: 15px;
+    padding-inline: 0;
 	}
 
 	&__title {
 		font-size: 48px;
   	font-weight: 500;
   	text-transform: uppercase;
+    margin-left: 15px;
 
 		span {
 			font-weight: 800;
@@ -21,6 +23,7 @@
 	&__description {
 		font-size: 20px;
   	font-weight: 300;
+    margin-left: 15px;
 	}
 }
 
