--- a/src/app/components/Offers/Offers.scss
+++ b/src/app/components/Offers/Offers.scss
@@ -1,27 +1,39 @@
 @import '../../../styles/variables.scss';
 
+// СТИЛИЗАЦИЯ
 .offers {
-	color: #ffffff;
+  color: #ffffff;
 
-	&__item {
-		display: flex;
-  	flex-direction: column;
-  	gap: 10px;
-  	padding: 80px 110px;
-  	border-radius: 10px;
-  	background-image: url('/images/offers/offer.jpg'),
-    linear-gradient(#bdc7d1 10%, #b6bfca);
-  	background-repeat: no-repeat;
-  	background-position: right center;
-  	background-size: contain;
-	}
-	&__date {
-		line-height: 21px;
+  &__container {
+    padding: 0;
+    overflow-x: hidden;
+  }
+
+  &__item {
+    position: relative;
+    z-index: 1;
+
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+    width: calc(100% - 30px);
+    padding: 80px 110px;
+    margin: 0 auto;
+
+    border-radius: 10px;
+    background: linear-gradient(#bdc7d1 10%, #b6bfca);
+    overflow: hidden;
+  }
+
+  &__date {
+    line-height: 21px;
 		letter-spacing: 4px;
 		font-weight: 500;
   	text-transform: uppercase;
-	}
-	&__title {
+  }
+
+  &__title {
 		font-size: 70px;
   	font-weight: 500;
   	line-height: 80px;
@@ -30,13 +42,15 @@
 			font-weight: 800;
 		}
 	}
-	&__description {
+
+  &__description {
 		font-size: 20px;
   	line-height: 30px;
   	max-width: 440px;
   	margin-top: 25px;
 	}
-	&__button {
+
+  &__button {
 		font-size: 18px;
   	font-weight: 700;
   	text-transform: uppercase;
@@ -51,121 +65,192 @@
       background-color: $color-active;
     }
   }
+
+  &__image {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: -1;
+    height: 100%;
+  }
 }
 
-/* СТИЛИ СЛАЙДЕРА */
-.offers .slick-slider {
-  margin-bottom: 0px;
-}
-.offers .brands__item {
-  display: flex;
-  align-items: center;
-  height: 80px;
-  margin: 35px 10px;
-  padding-inline: 15px;
-  border-radius: 10px;
-  box-shadow: 0px 0px 20px 5px #2b1c010a;
-}
-.offers .slick-dots {
-  bottom: 10px;
-}
-.offers .slick-dots li button:before {
-  content: '';
-  height: 7px;
-  width: 15px;
-  margin-left: 10px;
-  border-radius: 4px;
-  opacity: 0.15;
-  background-color: $color-secondary;
-  transition: all ease 0.4s;
-}
-.offers .slick-dots li.slick-active button:before {
-  width: 25px;
-  margin-left: 5px;
-  opacity: 1;
-  background-color: #ffffff;
-}
-/* Отключение всех стрелок (пока лень разбираться) */
-.slick-arrow {
-  display: none !important;
-}
+// СТИЛИ СЛАЙДЕРА - ПАГИНАЦИЯ
+.offers {
+  .slick-slider {
+    margin-bottom: 0px;
 
-/* АДАПТИВ */
-@media (max-width: 1100px) {
-  .offers__item {
-    padding: 60px 90px;
-  }
-  .offers__title {
-    font-size: 50px;
-    line-height: 50px;
-  }
-  .offers__description {
-    font-size: 16px;
-    line-height: 30px;
-    margin-top: 10px;
-  }
-  .offers__button {
-    font-size: 14px;
-    padding: 20px 40px;
-    margin-top: 20px;
-  }
-}
-@media (max-width: 800px) {
-  .offers__item {
-    padding: 25px;
-  }
-  .offers__date {
-    font-size: 12px;
-  }
-  .offers__title {
-    font-size: 40px;
-  }
-  .offers__description {
-    font-size: 14px;
-    line-height: 20px;
-    margin-top: 5px;
-    max-width: 300px;
-  }
-  .offers__button {
-    font-size: 12px;
-    padding: 16px 28px;
-    margin-top: 10px;
-  }
-}
-@media (max-width: 600px) {
-  .offers__item {
-    gap: 5px;
-    padding: 25px;
-  }
-  .offers__date {
-    font-size: 6px;
-    max-width: 150px;
-    line-height: 10px;
-    letter-spacing: 3px;
-  }
-  .offers__title {
-    font-size: 20px;
-    line-height: 22px;
-  }
-  .offers__description {
-    font-size: 12px;
-    line-height: 20px;
-    margin-top: 0;
-    max-width: 200px;
-  }
-  .offers__button {
-    font-size: 10px;
-    padding: 16px 28px;
-    margin-top: 5px;
+    @media (max-width: 600px) {
+      margin-bottom: 40px;
+    }
   }
 
-  .offers .slick-slider {
-    margin-bottom: 30px;
+  .brands__item {
+    display: flex;
+    align-items: center;
+    height: 80px;
+    margin: 35px 10px;
+    padding-inline: 15px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 20px 5px #2b1c010a;
   }
-  .offers .slick-dots {
-    bottom: -40px;
+
+  .slick-dots {
+    bottom: 10px;
+
+    @media (max-width: 600px) {
+      bottom: -40px;
+    }
   }
-  .offers .slick-dots li.slick-active button:before {
-    background-color: $color-accent;
+
+  .slick-dots li button:before {
+    content: '';
+    height: 7px;
+    width: 15px;
+    margin-left: 10px;
+    border-radius: 4px;
+    opacity: 0.15;
+    background-color: $color-secondary;
+    transition: all ease 0.4s;
+  }
+
+  .slick-dots li.slick-active button:before {
+    width: 25px;
+    margin-left: 5px;
+    opacity: 1;
+    background-color: #ffffff;
+
+    @media (max-width: 600px) {
+      background-color: $color-accent;
+    }
+  }
+}
+
+// СТИЛИ СЛАЙДЕРА - СТРЕЛКИ
+.offers {
+  .slick-arrow {
+    z-index: 2;
+    height: 70px;
+    width: 70px;
+    border-radius: 50%;
+    background-color: #ffffff;
+
+    @media(max-width: 800px) {
+      height: 40px;
+      width: 40px;
+    }
+  }
+
+  .slick-prev {
+    left: -20px;
+
+    @media(max-width: 800px) {
+      left: -8px;
+    }
+
+    &:before {
+      content: url(../../../../public/icons/arrow-left-y.svg);
+    }
+  }
+
+  .slick-next {
+    right: -20px;
+
+    @media(max-width: 800px) {
+      right: -8px;
+    }
+
+    &:before {
+      content: url(../../../../public/icons/arrow-right-y.svg);
+    }
+  }
+}
+
+// АДАПТИВ
+.offers {
+  @media(max-width: 1100px) {
+    &__item {
+      padding: 60px 90px;
+    }
+
+    &__title {
+      font-size: 50px;
+      line-height: 50px;
+    }
+
+    &__description {
+      font-size: 16px;
+      line-height: 30px;
+      margin-top: 10px;
+    }
+
+    &__button {
+      font-size: 14px;
+      padding: 20px 40px;
+      margin-top: 20px;
+    }
+  }
+
+  @media(max-width: 800px) {
+    &__item {
+      padding: 25px;
+    }
+
+    &__date {
+      font-size: 12px;
+    }
+
+    &__title {
+      font-size: 40px;
+    }
+
+    &__description {
+      font-size: 14px;
+      line-height: 18px;
+      margin-top: 5px;
+      max-width: 300px;
+    }
+
+    &__button {
+      font-size: 12px;
+      padding: 16px 28px;
+      margin-top: 10px;
+    }
+  }
+
+  @media(max-width: 600px) {
+    &__item {
+      gap: 5px;
+      padding: 25px;
+    }
+
+    &__date {
+      font-size: 6px;
+      max-width: 150px;
+      line-height: 10px;
+      letter-spacing: 3px;
+    }
+
+    &__title {
+      font-size: 20px;
+      line-height: 22px;
+    }
+
+    &__description {
+      font-size: 12px;
+      line-height: 14px;
+      margin-top: 0;
+      max-width: 200px;
+    }
+
+    &__button {
+      font-size: 10px;
+      padding: 16px 28px;
+      margin-top: 5px;
+    }
+
+    &__image {
+      right: -90px;
+    }
   }
 }
