--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -118,4 +118,9 @@ img {
   flex-direction: column;
   gap: 100px;
   margin: 100px 0;
+
+  @media(max-width: 800px) {
+    gap: 50px;
+    margin: 50px 0;
+  }
 }
