--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -104,7 +104,7 @@ img {
   font-family: 'Inter';
   font-size: 14px;
   font-weight: 400;
-  color: var(--primary-color);
+  color: $color-primary;
 }
 
 .container {
