--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,10 +1,13 @@
 // Colors
 $color-primary: #111111;
 $color-secondary: #3f4e65;
+$color-faint: #FFC6504D;
 $color-accent: #ffc85e;
 $color-active: #ff9900;
 
 $color-green: #1fd85d;
+$color-red: #d81f1f;
+$color-white: #ffffff;
 
 $color-category: #c0a67123;
 $color-category-active: #f5cd7f65;
