--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,11 @@
+// Breackpoints
+$desctop-l: 1360px;
+$desktop: 1100px;
+$tablet: 800px;
+$table_s: 600px;
+$mobile: 500px;
+$mobile-s: 350px;
+
 // Colors
 $color-primary: #111111;
 $color-secondary: #3f4e65;
@@ -8,6 +16,7 @@ $color-active: #ff9900;
 $color-green: #1fd85d;
 $color-red: #d81f1f;
 $color-white: #ffffff;
+$color-gray: #EDEDED;
 
 $color-category: #c0a67123;
 $color-category-active: #f5cd7f65;
