--- a/src/app/components/UI/Undefine/Undefine.scss
+++ b/src/app/components/UI/Undefine/Undefine.scss
@@ -1,7 +1,8 @@
-@use '../../../styles/variables.scss' as *;
+@use '/src/styles/variables.scss' as *;
 
 .product-undefine {
 	&__inner {
+		margin-top: 50px;
 		padding: 50px 20px;
 		background-color: $color-secondary;
 		box-shadow: 2px 2px 10px #00000085;
