--- a/src/app/components/ProductInfo/ProductInfo.scss
+++ b/src/app/components/ProductInfo/ProductInfo.scss
@@ -1,4 +1,4 @@
-@use '../../../styles/variables.scss' as *;
+@use '/src/styles/variables.scss' as *;
 
 .product-info {
 	&__container {
@@ -52,7 +52,6 @@
 
 	&__buy-list {
 		display: flex;
-		// justify-content: space-between;
 		align-items: center;
 		flex-wrap: wrap;
 		gap: 20px 40px;
@@ -183,46 +182,16 @@
 		}
 	}
 
-	&__description {
-		display: flex;
-		flex-direction: column;
-		align-items: flex-start;
-		gap: 5px;
+	&__accordion-title {
+		font-size: 16px;
+		font-weight: 500;
+	}
 
-		margin-top: 20px;
-
-		&--button {
-			display: flex;
-			align-items: center;
-			gap: 5px;
-
-			font-size: 16px;
-			font-weight: 500;
-			line-height: 24px;
-
-			padding: 5px 0;
-
-			transition: all ease $duration;
-
-			&:hover {
-				color: $color-accent;
-			}
-		}
-
-		&--img {
-			transform: rotate(-90deg);
-			transition: all ease $duration;
-		}
-
-		&--text {
-			font-size: 12px;
-			font-weight: 300;
-			line-height: 18px;
-			color: $color-secondary;
-
-			overflow: hidden;
-			transition: all ease $duration;
-		}
+	&__accordion-text {
+		font-size: 12px;
+		font-weight: 300;
+		line-height: 18px;
+		color: $color-secondary;
 	}
 
 	.product-info__share {
@@ -251,7 +220,7 @@
 
 // Адаптив
 .product-info {
-	@media (max-width: 1050px) {
+	@media (max-width: $desktop) {
 		&__share {
 			display: none;
 			max-width: 60px;
@@ -268,7 +237,7 @@
 		}
 	}
 
-	@media (max-width: 800px) {
+	@media (max-width: $tablet) {
 		&__container {
 			gap: 20px;
 		}
@@ -292,7 +261,7 @@
 		}
 	}
 
-	@media (max-width: 600px) {
+	@media (max-width: $tablet_s) {
 		&__container {
 			flex-direction: column;
 		}
