--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,27 +2,28 @@
 $desctop-l: 1360px;
 $desktop: 1100px;
 $tablet: 800px;
-$table_s: 600px;
+$tablet_s: 600px;
 $mobile: 500px;
 $mobile-s: 350px;
 
 // Colors
 $color-primary: #111111;
 $color-secondary: #3f4e65;
-$color-faint: #FFC6504D;
+$color-faint: #ffc6504d;
 $color-accent: #ffc85e;
 $color-active: #ff9900;
 
 $color-green: #1fd85d;
 $color-red: #d81f1f;
 $color-white: #ffffff;
-$color-gray: #EDEDED;
+$color-gray: #ededed;
 
 $color-category: #c0a67123;
 $color-category-active: #f5cd7f65;
 
 // Transitions
 $duration: 0.4s;
+$duration-l: 0.8s;
 
 // Fonts
 $inter: Inter, sans-serif;
