feat: исправление обноруженных багов

--- a/src/app/components/Header/Header.scss
+++ b/src/app/components/Header/Header.scss
@@ -208,6 +208,10 @@
 					color: $color-white;
 				}
 			}
+
+			@media(max-width: 600px) {
+				width: 100%;
+			}
 		}
 
 		@media(max-width: 800px) {
