--- a/src/app/components/Header/Header.scss
+++ b/src/app/components/Header/Header.scss
@@ -10,7 +10,7 @@
 	.mobile {
 		display: none;
 
-		@media(max-width: $tablet) {
+		@media (max-width: $tablet) {
 			display: flex;
 		}
 	}
@@ -39,7 +39,7 @@
 			justify-content: space-between;
 			gap: 15px;
 
-			@media(max-width: $tablet) {
+			@media (max-width: $tablet) {
 				flex-direction: column;
 				align-items: flex-start;
 				gap: 25px;
@@ -72,7 +72,7 @@
 					height: 40px;
 					border-right: 1px dashed rgba($color-secondary, 0.2);
 
-					@media(max-width: $tablet) {
+					@media (max-width: $tablet) {
 						content: none;
 					}
 				}
@@ -110,7 +110,7 @@
 				}
 			}
 
-			@media(max-width: $desktop) {
+			@media (max-width: $desktop) {
 				& li:nth-child(1)::after {
 					content: none;
 				}
@@ -120,7 +120,7 @@
 				}
 			}
 
-			@media(max-width: $tablet) {
+			@media (max-width: $tablet) {
 				flex-direction: column;
 				gap: 15px;
 				width: 100%;
@@ -138,7 +138,7 @@
 			flex-direction: column;
 			gap: 25px;
 
-			&-nav {
+			&-list {
 				display: flex;
 				gap: 60px;
 
@@ -158,11 +158,11 @@
 						height: 40px;
 						border-right: 1px dashed rgba($color-secondary, 0.2);
 
-						@media(max-width: $desctop-l) {
+						@media (max-width: $desctop-l) {
 							right: -15px;
 						}
 
-						@media(max-width: $tablet) {
+						@media (max-width: $tablet) {
 							content: none;
 						}
 					}
@@ -176,11 +176,11 @@
 					}
 				}
 
-				@media(max-width: $desctop-l) {
+				@media (max-width: $desctop-l) {
 					gap: 30px;
 				}
 
-				@media(max-width: $tablet) {
+				@media (max-width: $tablet) {
 					flex-direction: column;
 					gap: 20px;
 				}
@@ -193,24 +193,20 @@
 			}
 
 			&-price {
-				display: flex;
-				align-items: center;
-				justify-content: center;
-				gap: 12px;
-				height: 70px;
 				min-width: 290px;
-				border-radius: 80px;
-				background-color: $color-accent;
 
 				span {
 					font-size: 14px;
 					font-weight: 700;
-					color: $color-white;
 				}
+			}
+
+			@media (max-width: 600px) {
+				width: 100%;
 			}
 		}
 
-		@media(max-width: 800px) {
+		@media (max-width: 800px) {
 			position: absolute;
 			background-color: $color-white;
 			border-bottom: none;
@@ -285,30 +281,18 @@
 				height: 66px;
 				width: 156px;
 
-				@media(max-width: $tablet) {
+				@media (max-width: $tablet) {
 					height: auto;
 					width: auto;
 				}
 			}
 
-			&-catalog {
-				display: flex;
-				gap: 12px;
-
+			&-catalog.button {
 				font-weight: 700;
 
 				padding: 22px 56px;
 
-				color: $color-white;
-				border-radius: 80px;
-				background-color: $color-accent;
-				transition: all ease $duration;
-
-				&:hover {
-					background-color: $color-active;
-				}
-
-				@media(max-width: $tablet) {
+				@media (max-width: $tablet) {
 					display: none;
 				}
 			}
@@ -331,15 +315,9 @@
 				button {
 					padding: 11px 12px;
 					border-radius: 50%;
-					background-color: $color-accent;
-					transition: all ease $duration;
-
-					&:hover {
-						background-color: $color-active;
-					}
 				}
 
-				@media(max-width: $desktop) {
+				@media (max-width: $desktop) {
 					display: none;
 				}
 			}
@@ -376,32 +354,18 @@
 					color: $color-secondary;
 				}
 
-				@media(max-width: $desctop-l) {
+				@media (max-width: $desctop-l) {
 					display: none;
 				}
 			}
 
-			&-price {
-				position: relative;
-				display: flex;
-				align-items: center;
-				gap: 12px;
-
+			&-price.button {
 				font-size: 14px;
 				font-weight: 700;
 
 				padding: 21px 42px;
 
-				border-radius: 80px;
-				color: $color-white;
-				background-color: $color-accent;
-				transition: all ease $duration;
-
-				&:hover {
-					background-color: $color-active;
-				}
-
-				@media(max-width: $tablet) {
+				@media (max-width: $tablet) {
 					display: none;
 				}
 			}
@@ -429,13 +393,13 @@
 						color: $color-white;
 						background-color: $color-accent;
 
-						@media(max-width: $tablet) {
+						@media (max-width: $tablet) {
 							font-size: 10px;
 							padding: 2px 3px;
 						}
 					}
 
-					@media(max-width: $tablet) {
+					@media (max-width: $tablet) {
 						img {
 							height: 16px;
 							width: 22px;
@@ -458,13 +422,14 @@
 						color: $color-primary;
 					}
 
-					@media(max-width: $tablet) {
+					@media (max-width: $tablet) {
 						display: none;
 					}
 				}
 			}
 		}
-		@media(max-width: $tablet) {
+		
+		@media (max-width: $tablet) {
 			padding: 10px 0;
 			margin-top: 0;
 			border-bottom: 2px solid rgba($color-secondary, 0.2);
@@ -496,12 +461,12 @@
 			border-right: 1px dashed rgba($color-secondary, 0.2);
 		}
 
-		@media(max-width: $tablet) {
+		@media (max-width: $tablet) {
 			display: block;
 		}
 	}
 
-	@media(max-width: $tablet) {
+	@media (max-width: $tablet) {
 		position: fixed;
 	}
 }
