--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -98,6 +98,10 @@ img {
 }
 
 /* ГЛОБАЛЬНЫЕ СТИЛИ */
+html {
+  scroll-padding-top: 109px;
+}
+
 .body {
   display: flex;
   flex-direction: column;
@@ -106,6 +110,10 @@ img {
   font-size: 14px;
   font-weight: 400;
   color: $color-primary;
+
+  &__no-scroll {
+    overflow: hidden;
+  }
 }
 
 .container {
@@ -117,12 +125,32 @@ img {
 .main {
   display: flex;
   flex-direction: column;
-  gap: 100px;
-  margin-bottom: 100px;
 
-  @media(max-width: 800px) {
-    gap: 50px;
+  @media (max-width: $tablet) {
     margin-top: 108px;
-    margin-bottom: 50px;
+  }
+
+  section {
+    padding: 50px 0;
+
+    &:first-child {
+      padding: 0 0 50px 0;
+    }
+
+    &:last-child {
+      padding-bottom: 100px;
+    }
+
+    @media (max-width: $tablet) {
+      padding: 25px 0;
+
+      &:first-child {
+        padding: 0 0 25px 0;
+      }
+  
+      &:last-child {
+        padding-bottom: 50px;
+      }
+    }
   }
 }
