--- a/src/app/[category]/components/Filters/Filters.scss
+++ b/src/app/[category]/components/Filters/Filters.scss
@@ -1,43 +1,15 @@
 @use '/src/styles/variables.scss' as *;
 
 .filters {
-  .container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    max-width: 320px;
-  }
+	display: flex;
+	flex-direction: column;
+	gap: 15px;
+	width: 290px;
 
-  &__buttons {
-    display: flex;
-    margin-top: 26px;
-    gap: 10px;
-
-    &__show-products {
-      width: 180px;
-      height: 60px;
-      border-radius: 79px;
-      background-color: $color-accent;
-
-      &:hover {
-        background-color: $color-active;
-      }
-
-      span {
-        color: #ffffff;
-        font-weight: 700;
-      }
-    }
-
-    &__reset-filters {
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-      background-color: $color-accent;
-
-      &:hover {
-        background-color: $color-active;
-      }
-    }
-  }
+	&__title {
+		font-size: 16px;
+		font-weight: 500;
+		text-transform: uppercase;
+		color: $color-primary;
+	}
 }
