--- a/src/app/[category]/components/Filters/ManufacturerFilter/ManufacturerFilter.scss
+++ b/src/app/[category]/components/Filters/ManufacturerFilter/ManufacturerFilter.scss
@@ -1,62 +1,30 @@
 @use '/src/styles/variables.scss' as *;
 
 .manufacturer-filter {
-  .container {
-    margin-top: 30px;
-  }
+	display: flex;
+	flex-direction: column;
+	gap: 15px;
+	margin: 5px 0;
 
-  &__title {
-    color: $color-primary;
-    font-size: 16px;
-    font-weight: 500;
-  }
+	&__title {
+		font-size: 16px;
+		font-weight: 500;
+	}
 
-  &__main-search {
-    display: flex;
-    margin-top: 16px;
-    padding: 10px;
-    gap: 26px;
-    border-radius: 80px;
-    background-color: $color-gray;
+	&__list {
+		display: flex;
+		flex-direction: column;
+		gap: 8px;
 
-    input {
-      max-width: 200px;
-      padding-left: 10px;
-      background-color: inherit;
-    }
+		&-item {
+			display: flex;
+			align-items: center;
+			gap: 10px;
+			color: $color-secondary;
 
-    button {
-      padding: 11px 12px;
-      border-radius: 50%;
-      background-color: $color-accent;
-      transition: all ease $duration;
-
-      &:hover {
-        background-color: $color-active;
-      }
-    }
-  }
-
-  &__manufacturers {
-    margin-top: 16px;
-
-    li {
-      margin-top: 6px;
-      height: 20px;
-      color: $color-secondary;
-    }
-
-    input {
-      margin-right: 10px;
-    }
-
-    &__acc {
-      margin-top: 16px;
-      color: $color-secondary;
-    }
-  }
-
-  &__show-button {
-    margin-top: 16px;
-  }
+			span {
+				font-size: 10px;
+			}
+		}
+	}
 }
