--- a/src/app/[category]/components/CategoryHeader/CategoryHeader.scss
+++ b/src/app/[category]/components/CategoryHeader/CategoryHeader.scss
@@ -8,6 +8,9 @@
 	@media (max-width: $tablet) {
 		flex-direction: column;
 		gap: 10px;
+	}
+
+	@media (max-width: $mobile) {
 		padding: 25px 0 0 !important;
 	}
 
@@ -36,6 +39,7 @@
 		font-weight: 400;
 		margin-left: 5px;
 		color: $color-secondary;
+		background-color: inherit;
 		cursor: pointer;
 
 		&-title {
